name:                Cards
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Cards#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.couuu Muuu
COPYRIGHT:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Utility
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.11 && < 0.12
                     , tf-random >= 0.5 && < 0.6
                     , primitive >= 0.6 && < 0.7
                     , MonadRandom >= 0.4 && < 0.6
  default-language:    Haskell2010
  
executable Cards-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , Cards
  default-language:    Haskell2010

test-suite Cards-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Cards
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Cards
